Closed Bug 402308 Opened 17 years ago Closed 17 years ago

Fix miscellaneous compiler warnings in nss/cmd

Categories

(NSS :: Tools, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(1 file)

Attached patch Proposed patchSplinter Review
The attached patch fixes several compiler warnings in nss/cmd.
Hopefully it is obvious what compiler warning each change fixes.
Attachment #287190 - Flags: review?(julien.pierre.boogz)
Comment on attachment 287190 [details] [diff] [review]
Proposed patch

r=nelson for trunk
Attachment #287190 - Flags: review+
I checked in the patch on the NSS trunk for NSS 3.12.

Checking in checkcert/checkcert.c;
/cvsroot/mozilla/security/nss/cmd/checkcert/checkcert.c,v  <--  checkcert.c
new revision: 1.6; previous revision: 1.5
done
Checking in crmftest/testcrmf.c;
/cvsroot/mozilla/security/nss/cmd/crmftest/testcrmf.c,v  <--  testcrmf.c
new revision: 1.10; previous revision: 1.9
done
Checking in pk12util/pk12util.c;
/cvsroot/mozilla/security/nss/cmd/pk12util/pk12util.c,v  <--  pk12util.c
new revision: 1.38; previous revision: 1.37
done
Checking in shlibsign/shlibsign.c;
/cvsroot/mozilla/security/nss/cmd/shlibsign/shlibsign.c,v  <--  shlibsign.c
new revision: 1.15; previous revision: 1.14
done
Checking in strsclnt/strsclnt.c;
/cvsroot/mozilla/security/nss/cmd/strsclnt/strsclnt.c,v  <--  strsclnt.c
new revision: 1.59; previous revision: 1.58
done
Checking in vfychain/vfychain.c;
/cvsroot/mozilla/security/nss/cmd/vfychain/vfychain.c,v  <--  vfychain.c
new revision: 1.11; previous revision: 1.10
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.12
Attachment #287190 - Flags: review?(julien.pierre.boogz) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: