Bug 402308: fixed several compiler warnings in nss/cmd. r=nelson. Modified Files: 	checkcert/checkcert.c crmftest/testcrmf.c pk12util/pk12util.c 	shlibsign/shlibsign.c strsclnt/strsclnt.c vfychain/vfychain.c