security/nss/cmd/pk12util/pk12util.c
@@ -741,7 +741,6 @@ P12U_ListPKCS12File(char *in_file, PK11SlotInfo *slot,
     SECItem uniPwitem = { 0 };
     SECStatus rv = SECFailure;
     const SEC_PKCS12DecoderItem *dip;
-    int error;
 
     p12dcx = p12U_ReadPKCS12File(&uniPwitem, in_file, slot, slotPw,
                              p12FilePw);
